--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 *{
     /* overflow-x: hidden !important; */
-    border: 2px solid red;
+    /* border: 2px solid red; */
     padding: 0;
     margin: 0;
 }
